k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safepipeline-service
spec:
  selector:
    app: safepipeline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
